--- a/MyFirstGroovyProject/test-output/index.html
+++ b/MyFirstGroovyProject/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>E:\Eclipse_Workspace\MyFirstGroovyProject\XML_Files\testng.xml</span>
+                    <span>E:\PavaniWorkSpace\Git_WorkSpace\MyFirstGroovyProject\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -174,7 +174,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">E:\Eclipse_Workspace\MyFirstGroovyProject\XML_Files\testng.xml</span>
+            <span class="header-content">E:\PavaniWorkSpace\Git_WorkSpace\MyFirstGroovyProject\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -227,11 +227,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginApp')
 data.setCell(0, 2, 'com.CURA.Testcase.Login_CURA')
-data.setCell(0, 3, 8442);
+data.setCell(0, 3, 8298);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'loginApp_test1')
 data.setCell(1, 2, 'com.CURA.Testcase.Login_CURA')
-data.setCell(1, 3, 2506);
+data.setCell(1, 3, 2496);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -263,35 +263,31 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.CURA.Testcase.Login_CURA</div> <!-- chronological-class-name -->
-              <div class="configuration-suite before">
-                <span class="method-name">setupSuite</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">112 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">loginApp</span>
-                <span class="method-start">10687 ms</span>
+                <span class="method-start">9842 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDownMethod([TestResult name=loginApp status=SUCCESS method=Login_CURA.loginApp()[pri:0, instance:com.CURA.Testc...)</span>
-                <span class="method-start">19133 ms</span>
+                <span class="method-start">18145 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">loginApp_test1</span>
-                <span class="method-start">19148 ms</span>
+                <span class="method-start">18161 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDownMethod([TestResult name=loginApp_test1 status=FAILURE method=Login_CURA.loginApp_test1()[pri:0, instance:co...)</span>
-                <span class="method-start">21658 ms</span>
+                <span class="method-start">20660 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22124 ms</span>
+                <span class="method-start">21143 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
