--- a/MyFirstGroovyProject/test-output/old/Default suite/classes.html
+++ b/MyFirstGroovyProject/test-output/old/Default suite/classes.html
@@ -4,21 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ReportsInGroovySelenium.DemoHEllo</td>
+<td>com.CURA.Testcase.Login_CURA</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>extentReportsDemo</td>
+<td>loginApp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginApp_test1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>startTest</td>
+<td>setUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -27,10 +31,14 @@
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>tearDownMethod</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>endTest</td>
+<td>tearDown</td>
 <td>&nbsp;</td></tr>
 </table>
