--- a/MyFirstGroovyProject/test-output/old/Default suite/methods.html
+++ b/MyFirstGroovyProject/test-output/old/Default suite/methods.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="deb56e">  <td>20/07/09 16:35:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DemoHEllo.startTest()[pri:0, instance:ReportsInGroovySelenium.DemoHEllo@71b1176b]">&gt;&gt;startTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1781071780</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>20/07/09 16:35:49</td>   <td>127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DemoHEllo.extentReportsDemo()[pri:0, instance:ReportsInGroovySelenium.DemoHEllo@71b1176b]">extentReportsDemo</td> 
-  <td>main@1781071780</td>   <td></td> </tr>
-<tr bgcolor="deb56e">  <td>20/07/09 16:35:49</td>   <td>133</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DemoHEllo.endTest()[pri:0, instance:ReportsInGroovySelenium.DemoHEllo@71b1176b]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>20/07/13 11:52:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp()[pri:0, instance:com.CURA.Testcase.Login_CURA@25d250c6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1850180796</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>20/07/13 11:53:01</td>   <td>9799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_CURA.loginApp()[pri:0, instance:com.CURA.Testcase.Login_CURA@25d250c6]">loginApp</td> 
+  <td>main@1850180796</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>20/07/13 11:53:09</td>   <td>18075</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.CURA.Testcase.Login_CURA@25d250c6]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1850180796</td>   <td></td> </tr>
+<tr bgcolor="deb56e">  <td>20/07/13 11:53:09</td>   <td>18089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_CURA.loginApp_test1()[pri:0, instance:com.CURA.Testcase.Login_CURA@25d250c6]">loginApp_test1</td> 
+  <td>main@1850180796</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>20/07/13 11:53:12</td>   <td>20637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDownMethod(org.testng.ITestResult)[pri:0, instance:com.CURA.Testcase.Login_CURA@25d250c6]">&lt;&lt;tearDownMethod</td> 
+<td>&nbsp;</td>  <td>main@1850180796</td>   <td></td> </tr>
+<tr bgcolor="f777e8">  <td>20/07/13 11:53:12</td>   <td>21099</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.CURA.Testcase.Login_CURA@25d250c6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1850180796</td>   <td></td> </tr>
 </table>
